# TAMUTest

./: .gitignore  CMakeLists.txt  alloc.f90  grdgen.f90  initia.f90  main.f90  makefile  space1.f90  ugrid2.f90  upbndry.f90
dat/: README
dat/adolfo1/: 1.agr  2d.lay  3d.lay  adolfo1.mesh_000  adolfo1.mesh_001  adolfo1.mesh_002  adolfo1.mesh_003  adolfo1.mesh_004  adolfo1.mesh_005  adolfo1.mesh_006  adolfo1.mesh_007  adolfo1.mesh_008  adolfo1.mesh_009  adolfo1.mesh_010  adolfo1.mesh_011  adolfo1.mesh_012  adolfo1.mesh_013  adolfo1.mesh_014  adolfo1.mesh_015  adolfo1.mesh_016  adolfo1.mesh_017  adolfo1.mesh_018  adolfo1.mesh_019  adolfo1.mesh_020  adolfo1.mesh_021  adolfo1.mesh_022  adolfo1.mesh_023  adolfo1.mesh_024  c2n.def  c2n.def_000  c2n.def_001  c2n.def_003  c2n.def_004  c2n.def_007  c2n.def_010  c2n.def_011  c2n.def_014  c2n.def_020  c2n.def_021  c2n.def_023  (+38 more)
dat/adolfo2/: adolfo2.mesh_000  adolfo2.mesh_001  adolfo2.mesh_002  adolfo2.mesh_003  adolfo2.mesh_004  adolfo2.mesh_005  adolfo2.mesh_006  adolfo2.mesh_007  adolfo2.mesh_008  adolfo2.mesh_009  adolfo2.mesh_010  adolfo2.mesh_011  adolfo2.mesh_012  adolfo2.mesh_013  adolfo2.mesh_014  adolfo2.mesh_015  adolfo2.mesh_016  adolfo2.mesh_017  adolfo2.mesh_018  adolfo2.mesh_019  adolfo2.mesh_020  adolfo2.mesh_021  adolfo2.mesh_022  adolfo2.mesh_023  adolfo2.mesh_024  c2n.def_000  c2n.def_001  c2n.def_004  c2n.def_005  c2n.def_012  c2n.def_014  c2n.def_015  c2n.def_017  c2n.def_019  c2n.def_020  c2n.def_023  c2n.def_024  fort.1089  parameter.nml  slice.x  (+27 more)
dat/tst/: c2n.def  (+9 more)
mod/: constants.f90  coord.f90  geom.f90
(+2 files in other folders)
